--- a/Projeto_WEB/dicas.html
+++ b/Projeto_WEB/dicas.html
@@ -1,4 +1,144 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8">
+  <title>Dicas • Sabores da Casa</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+  <!-- HEADER -->
+  <header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="Logo Sabores da Casa" width="15%" height="15%">
+      </a>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="receitas.html">Receitas</a></li>
+        <li><a href="dicas.html" class="ativo">Dicas</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="contactos.html">Contactos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <main class="main-dicas">
+    <section class="intro-dicas">
+      <h1>🍳 Dicas de Culinária e Vida na Cozinha</h1>
+      <p>Pequenos truques fazem uma grande diferença! Aprende a cozinhar com mais sabor, economia e praticidade — do corte perfeito ao aproveitamento de alimentos. Tudo com o toque caseiro que caracteriza o <strong>Sabores da Casa</strong>.</p>
+    </section>
+
+    <!-- PREPARAÇÃO -->
+    <section class="dicas-categoria">
+      <h2>🔪 Preparação</h2>
+      <div class="dicas-lista">
+        <article class="dica"><h3>Cebola sem lágrimas</h3><p>Coloca a cebola no frigorífico antes de cortar. O frio reduz os compostos que fazem os olhos lacrimejar.</p></article>
+        <article class="dica"><h3>Descascar alho rapidamente</h3><p>Bate os dentes de alho com o lado da faca e as cascas saem em segundos.</p></article>
+        <article class="dica"><h3>Ervas sempre frescas</h3><p>Envolve as ervas num guardanapo húmido e guarda no frigorífico dentro de um saco.</p></article>
+        <article class="dica"><h3>Evita que a fruta oxide</h3><p>Rega fatias de maçã ou pera com um pouco de sumo de limão para evitar que fiquem escuras.</p></article>
+        <article class="dica"><h3>Como cortar tomate sem esmagar</h3><p>Usa uma faca serrilhada — corta com facilidade sem perder o sumo.</p></article>
+        <article class="dica"><h3>Limão com mais sumo</h3><p>Rola o limão sobre a bancada aplicando pressão antes de cortar, para extrair mais sumo.</p></article>
+        <article class="dica"><h3>Amacia carnes naturalmente</h3><p>Deixa a carne marinar em vinho ou sumo de limão — o ácido ajuda a amaciar as fibras.</p></article>
+        <article class="dica"><h3>Como separar gemas de claras</h3><p>Usa uma garrafa de plástico: pressiona e solta sobre a gema, que é sugada sem esforço.</p></article>
+      </div>
+    </section>
+
+    <!-- COZEDURA -->
+    <section class="dicas-categoria">
+      <h2>🔥 Cozedura</h2>
+      <div class="dicas-lista">
+        <article class="dica"><h3>Arroz soltinho</h3><p>Adiciona umas gotas de limão na água durante a cozedura — ajuda a deixar os grãos separados.</p></article>
+        <article class="dica"><h3>Batatas douradas</h3><p>Depois de cortar, deixa-as em água fria por 30 minutos. Ficam mais crocantes ao fritar.</p></article>
+        <article class="dica"><h3>Evita que o leite derrame</h3><p>Coloca uma colher de pau atravessada na panela — impede o leite de transbordar.</p></article>
+        <article class="dica"><h3>Cozinhar legumes no ponto certo</h3><p>Ferve até ficarem ligeiramente firmes e mergulha em água gelada para manter a cor e textura.</p></article>
+        <article class="dica"><h3>Massas al dente</h3><p>Usa bastante água e mexe nos primeiros minutos. Nunca adiciones óleo à água!</p></article>
+        <article class="dica"><h3>Carne grelhada suculenta</h3><p>Deixa repousar 5 minutos após grelhar — os sucos redistribuem-se e o sabor intensifica.</p></article>
+        <article class="dica"><h3>Omelete fofa</h3><p>Adiciona uma colher de leite às gemas e bate bem — o resultado é leve e macio.</p></article>
+        <article class="dica"><h3>Sopa cremosa</h3><p>Acrescenta um pouco de batata ou feijão — eles espessam naturalmente sem precisar de natas.</p></article>
+      </div>
+    </section>
+
+    <!-- CONSERVAÇÃO -->
+    <section class="dicas-categoria">
+      <h2>🥫 Conservação</h2>
+      <div class="dicas-lista">
+        <article class="dica"><h3>Pão fresco por mais tempo</h3><p>Guarda num pano de algodão, não em saco plástico. Assim não ganha bolor.</p></article>
+        <article class="dica"><h3>Congela ervas</h3><p>Pica e coloca em cuvetes de gelo com azeite. Usa diretamente nas receitas.</p></article>
+        <article class="dica"><h3>Leite fresco</h3><p>Conserva na parte de trás do frigorífico, onde a temperatura é mais constante.</p></article>
+        <article class="dica"><h3>Evita bananas escuras</h3><p>Envolve o caule com película aderente — retarda o amadurecimento.</p></article>
+        <article class="dica"><h3>Molho extra</h3><p>Congela sobras de molho em pequenas porções. Ideal para usar mais tarde.</p></article>
+        <article class="dica"><h3>Congelar carne corretamente</h3><p>Usa sacos herméticos e etiqueta com a data — evita desperdício e sabor de “congelado”.</p></article>
+      </div>
+    </section>
+
+    <!-- CONFEITARIA -->
+    <section class="dicas-categoria">
+      <h2>🍰 Confeitaria</h2>
+      <div class="dicas-lista">
+        <article class="dica"><h3>Bolo mais fofo</h3><p>Todos os ingredientes devem estar à temperatura ambiente antes de bater.</p></article>
+        <article class="dica"><h3>Açúcar em pó caseiro</h3><p>Bate açúcar normal no liquidificador por alguns segundos — pronto!</p></article>
+        <article class="dica"><h3>Chocolate perfeito</h3><p>Derrete sempre em banho-maria, mexendo continuamente para não queimar.</p></article>
+        <article class="dica"><h3>Ovos frescos para sobremesas</h3><p>Coloca o ovo num copo com água — se afundar está bom, se flutuar, descarta.</p></article>
+        <article class="dica"><h3>Ponto de chantilly</h3><p>Usa natas frias e tigela gelada. Bate até formar picos firmes, sem passar do ponto.</p></article>
+        <article class="dica"><h3>Reaproveitar bolo seco</h3><p>Esfarela e mistura com leite condensado — vira trufas deliciosas!</p></article>
+      </div>
+    </section>
+
+    <!-- HIGIENE E SEGURANÇA -->
+    <section class="dicas-categoria">
+      <h2>🧽 Higiene e Segurança</h2>
+      <div class="dicas-lista">
+        <article class="dica"><h3>Lava bem frutas e legumes</h3><p>Deixa de molho em água e vinagre por 10 minutos antes de consumir.</p></article>
+        <article class="dica"><h3>Tábua de corte separada</h3><p>Usa uma para carnes e outra para legumes — evita contaminação cruzada.</p></article>
+        <article class="dica"><h3>Facas afiadas são mais seguras</h3><p>Facas cegas escorregam e causam mais acidentes. Afia regularmente.</p></article>
+        <article class="dica"><h3>Frigorífico limpo</h3><p>Limpa quinzenalmente com vinagre branco e evita cheiros indesejados.</p></article>
+      </div>
+    </section>
+
+    <!-- ECONOMIA E APROVEITAMENTO -->
+    <section class="dicas-categoria">
+      <h2>💡 Economia e Aproveitamento</h2>
+      <div class="dicas-lista">
+        <article class="dica"><h3>Usa as cascas!</h3><p>Cascas de cenoura, batata e courgette são ricas em fibras — usa em caldos e refogados.</p></article>
+        <article class="dica"><h3>Sobras criativas</h3><p>Arroz vira bolinhos, frango vira empadão — nada se perde!</p></article>
+        <article class="dica"><h3>Água do cozimento</h3><p>Usa a água de cozer legumes em sopas — está cheia de nutrientes.</p></article>
+        <article class="dica"><h3>Evita desperdício</h3><p>Planeia as refeições da semana antes de ir às compras — poupa tempo e dinheiro.</p></article>
+        <article class="dica"><h3>Congela porções</h3><p>Faz porções individuais de comida — evita estragar sobras e facilita o dia a dia.</p></article>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="index.html">
+          <img src="Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="logo" class="logo-img">
+        </a>
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="sobre.html">Sobre Nós</a></li>
+          <li><a href="/termos.html">Termos de Serviço</a></li>
+          <li><a href="/politica.html">Política de Privacidade</a></li>
+          <li><a href="contactos.html">Contacte-nos</a></li>
+        </ul>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/?locale=pt_PT" target="_blank"><img src="Imagens/facebook.png" alt="Facebook"></a>
+        <a href="https://x.com/" target="_blank"><img src="Imagens/twitter.png" alt="X"></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="Imagens/instagram.png" alt="Instagram"></a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Sabores da Casa. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+</body>
 </html>
