--- a/Projeto_WEB/receitas.html
+++ b/Projeto_WEB/receitas.html
@@ -1,4 +1,134 @@
 <!DOCTYPE html>
-<html>
+<html lang = pt>
+  <head>
+    <meta charset="UTF-8">
+    <title>Receitas • Sabores da Casa</title>
+    <link rel="stylesheet" href="/css/style.css">
+  </head>
+  <body>
+    <header>
+        <div class="logo">
+          <a href="index.html">
+            <img src="/Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="Logo Sabores da Casa" width="15%" height="15%">
+          </a>
+        </div>
 
+        <nav>
+          <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="receitas.html">Receitas</a></li>
+            <li><a href="dicas.html">Dicas</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contactos.html">Contactos</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main class="receitas-page">
+  <section class="filtro-categorias">
+      <h2>Categorias</h2>
+      <div class="categorias-container">
+          <a href="#doces" class="categoria-btn">Doces</a>
+          <a href="#pratos-principais" class="categoria-btn">Pratos Principais</a>
+          <a href="#sopas" class="categoria-btn">Sopas</a>
+          <a href="#bebidas" class="categoria-btn">Bebidas</a>
+      </div>
+  </section>
+
+  <section class="lista-receitas">
+      <h2 id="doces">Doces</h2>
+      <div class="cards-receitas">
+          <article class="receita-card">
+              <img src="imagens/bolochocolate.jpg" alt="Bolo de Chocolate">
+              <div class="conteudo-card">
+                  <h3>Bolo de Chocolate Caseiro</h3>
+                  <p>Fofinho e cremoso, perfeito para qualquer ocasião.</p>
+                  <a href="/Receitas/receitabolochocolate.html" class="botao">Ver Receita</a>
+              </div>
+          </article>
+
+          <article class="receita-card">
+              <img src="imagens/tarteDeMaca.jpeg" alt="Tarte de Maçã">
+              <div class="conteudo-card">
+                  <h3>Tarte de Maçã</h3>
+                  <p>Crocante e doce, ideal para sobremesas.</p>
+                  <a href="/Receitas/receitatartemaca.html" class="botao">Ver Receita</a>
+              </div>
+          </article>
+      </div>
+
+      <h2 id="pratos-principais">Pratos Principais</h2>
+      <div class="cards-receitas">
+          <article class="receita-card">
+              <img src="imagens/bacalhaucomnatas.jpg" alt="Bacalhau com Natas">
+              <div class="conteudo-card">
+                  <h3>Bacalhau com Natas</h3>
+                  <p>Um prato tradicional português cheio de sabor.</p>
+                  <a href="/Receitas/receitabacalhaunatas.html" class="botao">Ver Receita</a>
+              </div>
+          </article>
+
+          <article class="receita-card">
+              <img src="imagens/frangoAssado.jpeg" alt="Frango Assado com Ervas">
+              <div class="conteudo-card">
+                  <h3>Frango Assado com Ervas</h3>
+                  <p>Um frango assado aromático e cheio de sabor.</p>
+                  <a href="/Receitas/receitafrangoervas.html" class="botao">Ver Receita</a>
+              </div>
+          </article>
+      </div>
+
+      <h2 id="sopas">Sopas</h2>
+      <div class="cards-receitas">
+          <article class="receita-card">
+              <img src="imagens/sopadelegumes.jpg" alt="Sopa de Legumes">
+              <div class="conteudo-card">
+                  <h3>Sopa de Legumes</h3>
+                  <p>Saudável e reconfortante para qualquer estação.</p>
+                  <a href="/Receitas/receitasopalegumes.html" class="botao">Ver Receita</a>
+              </div>
+          </article>
+      </div>
+
+      <h2 id="bebidas">Bebidas</h2>
+      <div class="cards-receitas">
+          <article class="receita-card">
+              <img src="imagens/smoothie-frutas.jpg" alt="Smoothie de Frutas">
+              <div class="conteudo-card">
+                  <h3>Smoothie de Frutas</h3>
+                  <p>Refrescante, saudável e cheio de sabor.</p>
+                  <a href="receita-smoothie-frutas.html" class="botao">Ver Receita</a>
+              </div>
+          </article>
+      </div>
+  </section>
+</main>
+
+<footer class="site-footer">
+        	<div class="footer-content">
+            	<div class="footer-logo">
+					<a href="index.html">
+                		<img src="Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="logo" class="logo-img">
+					</a>
+            	</div>
+            	<div class="footer-links">
+                	<ul>
+                    	<li><a href="sobre.html">Sobre Nós</a></li>
+                    	<li><a href="/termos.html">Termos de Serviço</a></li>
+                    	<li><a href="/politica.html">Política de Privacidade</a></li>
+                    	<li><a href="contactos.html">Contate-nos</a></li>
+                	</ul>
+            	</div>
+            	<div class="social-icons">
+                	<a href="https://www.facebook.com/?locale=pt_PT" target="_blank"><img src="Imagens/facebook.png" alt="Facebook"></a>
+                	<a href="https://x.com/" target="_blank"><img src="Imagens/twitter.png" alt="X"></a>
+                	<a href="https://www.instagram.com/" target="_blank"><img src="Imagens/instagram.png" alt="Instagram"></a>
+            	</div>
+        	</div>
+        	<div class="footer-bottom">
+            	<p>&copy; 2025 Sabores da Casa. Todos os direitos reservados.</p>
+        	</div>
+    	</footer> 
+
+  </body>
 </html>
