--- a/Projeto_WEB/sobre.html
+++ b/Projeto_WEB/sobre.html
@@ -1,4 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang = pt>
+<head>
+  <meta charset="UTF-8">
+    <title>Sobre nós • Sabores da Casa</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
 
+  <!-- Header normal -->
+  <header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="Logo Sabores da Casa">
+      </a>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="receitas.html">Receitas</a></li>
+        <li><a href="dicas.html">Dicas</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="contactos.html">Contactos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Seção Sobre Nós detalhada -->
+  <main>
+    <section class="sobre-detalhado">
+      <h1>Sobre Sabores da Casa</h1>
+      <p>O <strong>Sabores da Casa</strong> nasceu da paixão pela culinária portuguesa e pelo prazer de partilhar boas refeições. Acreditamos que cozinhar é uma forma de amor e tradição — um momento para criar memórias e saborear o que a vida tem de melhor.</p>
+      <p>Aqui vais encontrar receitas autênticas, simples e cheias de sabor, preparadas com ingredientes acessíveis e muito carinho.</p>
+      <p>O nosso objetivo é inspirar todos a experimentar a culinária portuguesa de forma divertida e acessível, mantendo a qualidade e o amor em cada prato.</p>
+    </section>
+
+    <!-- Seção Nossos Chefs -->
+    <section class="nossos-chefs">
+      <h2>👨‍🍳 Nossos Chefs</h2>
+      <div class="chefs-container">
+        <div class="chef-card">
+          <img src="Imagens/cozinheiroMiguel.jpeg" alt="Chef Miguel">
+          <h3>Chef Miguel</h3>
+          <p>Especialista em pratos tradicionais portugueses.</p>
+        </div>
+        <div class="chef-card">
+          <img src="Imagens/cozinheiroGoncalo.jpeg" alt="Chef Gonçalo">
+          <h3>Chef Gonçalo</h3>
+          <p>Responsável pelas receitas doces e sobremesas.</p>
+        </div>
+        <div class="chef-card">
+          <img src="Imagens/cozinheiroRodrigo.jpeg" alt="Chef Rodrigo">
+          <h3>Chef Rodrigo</h3>
+          <p>Foca em pratos saudáveis e leves.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="index.html">
+          <img src="Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="logo" class="logo-img">
+        </a>
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="sobre.html">Sobre Nós</a></li>
+          <li><a href="/termos.html">Termos de Serviço</a></li>
+          <li><a href="/politica.html">Política de Privacidade</a></li>
+          <li><a href="contactos.html">Contate-nos</a></li>
+        </ul>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/?locale=pt_PT" target="_blank"><img src="Imagens/facebook.png" alt="Facebook"></a>
+        <a href="https://x.com/" target="_blank"><img src="Imagens/twitter.png" alt="X"></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="Imagens/instagram.png" alt="Instagram"></a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Sabores da Casa. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+</body>
 </html>
