--- a/Projeto_WEB/contactos.html
+++ b/Projeto_WEB/contactos.html
@@ -1,4 +1,86 @@
 <!DOCTYPE html>
-<html lang = pt>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8">
+  <title>Contactos • Sabores da Casa</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+  <!-- Header -->
+  <header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="/Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="Logo Sabores da Casa" width="15%" height="15%">
+      </a>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="receitas.html">Receitas</a></li>
+        <li><a href="dicas.html">Dicas</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="contactos.html">Contactos</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Contactos -->
+  <main class="main-contacto">
+    <h1>Contacte-nos</h1>
+
+    <form class="form-contacto" action="enviar.php" method="post">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="mensagem">Mensagem:</label>
+      <textarea id="mensagem" name="mensagem" rows="6" required></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+
+    <div class="info-contacto">
+      <p><strong>Email:</strong> projeto.ipw.gmr@gmail.com</p>
+      <p><strong>Telefone:</strong> +351 912 345 678</p>
+      <p><strong>Morada:</strong> Rua Exemplo, 123, Lisboa</p>
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18..." 
+        title="Mapa Sabores da Casa" 
+        loading="lazy">
+      </iframe>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="index.html">
+          <img src="Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="logo" class="logo-img">
+        </a>
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="sobre.html">Sobre Nós</a></li>
+          <li><a href="/termos.html">Termos de Serviço</a></li>
+          <li><a href="/politica.html">Política de Privacidade</a></li>
+          <li><a href="contactos.html">Contate-nos</a></li>
+        </ul>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/?locale=pt_PT" target="_blank"><img src="Imagens/facebook.png" alt="Facebook"></a>
+        <a href="https://x.com/" target="_blank"><img src="Imagens/twitter.png" alt="X"></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="Imagens/instagram.png" alt="Instagram"></a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Sabores da Casa. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+</body>
 </html>
