--- a/Projeto_WEB/index.html
+++ b/Projeto_WEB/index.html
@@ -3,10 +3,13 @@
 	<head> 
 		<meta charset = "UTF-8">
 		<title> Sabores da Casa </title>
+		<link rel="icon" href="Imagens/sabores-da-casa-high-resolution-logo-transparent.png">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="script.js"></script>
 	</head>
 
 	<body>
+		
 		<header>
 			<div class="logo">
 				<a href="index.html">
@@ -14,8 +17,9 @@
 				</a>
 			</div>
 
+
 			<nav>
-				<ul>
+				<ul class="menu-list">
 					<li><a href="index.html">Início</a></li>
 					<li><a href="receitas.html">Receitas</a></li>
 					<li><a href="dicas.html">Dicas</a></li>
@@ -24,36 +28,114 @@
 				</ul>
 			</nav>
 		</header>
-		<center>
 
-		</center>
 
 		<div class="container">
-    <main>
-        <h2>Conteúdo Principal</h2>
-        <p>Este é o conteúdo principal do site.</p>
-    </main>
-	<aside>
-		<h2>Barra Lateral</h2>
-		<p>Este é o conteúdo da barra lateral.</p>
-	</aside>	
+			<main>
+				<h2>Bem-vindo ao Sabores da Casa!</h2>
+				<p>Descubra o prazer de cozinhar com simplicidade e sabor. No <strong>Sabores da Casa</strong>, partilhamos receitas tradicionais e dicas práticas para transformar cada refeição num momento especial em família.</p>
+
+				<section class="destaques">
+					<h3>🍽️ Receitas em Destaque</h3>
+					<div class="receitas">
+						<article class="receita">
+							<img src="imagens/bolochocolate.jpg" alt="Bolo de Chocolate Caseiro">
+							<h4>Bolo de Chocolate Caseiro</h4>
+							<p>Um clássico irresistível, fofinho e com cobertura cremosa de chocolate.</p>
+							<a href="Receitas/receitabolochocolate.html" class="botao">Ver Receita</a>
+						</article>
+
+						<article class="receita">
+							<img src="imagens/bacalhaucomnatas.jpg" alt="Bacalhau com Natas">
+							<h4>Bacalhau com Natas</h4>
+							<p>Um prato português tradicional, cremoso e cheio de sabor.</p>
+							<a href="Receitas/receitabacalhaunatas.html" class="botao">Ver Receita</a>
+						</article>
+
+						<article class="receita">
+							<img src="imagens/tarteDeMaca.jpeg" alt="Tarte de Maçã Caseira">
+							<h4>Tarte de Maçã Caseira</h4>
+							<p>Uma sobremesa clássica, com massa crocante e recheio cremoso de maçã e canela.</p>
+							<a href="/Receitas/receitatartemaca.html" class="botao">Ver Receita</a>
+						</article>
+
+						<article class="receita">
+							<img src="imagens/sopadelegumes.jpg" alt="Sopa de Legumes">
+							<h4>Sopa de Legumes</h4>
+							<p>Saudável, reconfortante e perfeita para qualquer estação do ano.</p>
+							<a href="Receitas/receitasopalegumes.html" class="botao">Ver Receita</a>
+						</article>
+
+						<article class="receita">
+							<img src="imagens/frangoAssado.jpeg" alt="Frango Assado com Ervas">
+							<h4>Frango Assado com Ervas</h4>
+							<p>Delicioso frango temperado com ervas aromáticas e limão, assado até ficar dourado e suculento.</p>
+							<a href="Receitas/receitafrangoassado.html" class="botao">Ver Receita</a>
+						</article>
+					</div>
+				</section>
+			</main>
+			<aside>
+			<h2>📰 Notícias</h2>
+			<!-- Carrossel -->
+				<div class="carrossel">
+					<div class="slides">
+						<img src="imagens/frangoAssado.jpeg" alt="n1">
+						<img src="imagens/sopadelegumes.jpg" alt="n2">
+						<img src="imagens/tarteDeMaca.jpeg" alt="n3">
+						<img src="imagens/bacalhaucomnatas.jpg" alt="n4">
+						<img src="imagens/bolochocolate.jpg" alt="n5">
+					</div>
+				</div>
+
+				<!-- Receitas brevemente -->
+				<div class="brevemente">
+					<h3>🍲 Receitas que serão lançadas brevemente</h3>
+					<ul>
+						<li>Risoto de Cogumelos e Queijo Parmesão</li>
+						<li>Tarte de Limão Merengada</li>
+						<li>Lasanha de Legumes com Molho Bechamel</li>
+						<li>Pão Caseiro com Ervas Aromáticas</li>
+					</ul>
+				</div>
+			</aside>
+	
+		</div>
+
+		<div class="sobre-nos">
+			<h2>👨‍🍳 Sobre Nós</h2>
+			<p>O <strong>Sabores da Casa</strong> nasceu da paixão pela culinária portuguesa e pelo prazer de partilhar boas refeições. Acreditamos que cozinhar é uma forma de amor e tradição — um momento para criar memórias e saborear o que a vida tem de melhor.</p>
+			<p>Aqui vais encontrar receitas autênticas, simples e cheias de sabor, preparadas com ingredientes acessíveis e muito carinho.</p>
+			<a href="sobre.html" class="botao">Saber Mais</a>
 		</div>
 
 
 
 
-		<footer class="custom-footer">
-    		<div class="footer-container">
-      			<div class="footer-center">
-        			<div class="footer-brand">
-         				<img src="/Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="Sabores da Casa" class="footer-logo"/>
-          				<a href="index.html"><span class="footer-title">@Sabores da Casa</span></a>
-        			</div>
-        			<p class="footer-desc">
-          				A compartilhar as receitas mais saborosas de sempre!
-        			</p>
-      			</div>
-    		</div>
-		</footer>
+		<footer class="site-footer">
+        	<div class="footer-content">
+            	<div class="footer-logo">
+					<a href="index.html">
+                		<img src="Imagens/sabores-da-casa-high-resolution-logo-transparent.png" alt="logo" class="logo-img">
+					</a>
+            	</div>
+            	<div class="footer-links">
+                	<ul>
+                    	<li><a href="sobre.html">Sobre Nós</a></li>
+                    	<li><a href="termos.html">Termos de Serviço</a></li>
+                    	<li><a href="/politica.html">Política de Privacidade</a></li>
+                    	<li><a href="contactos.html">Contate-nos</a></li>
+                	</ul>
+            	</div>
+            	<div class="social-icons">
+                	<a href="https://www.facebook.com/?locale=pt_PT" target="_blank"><img src="Imagens/facebook.png" alt="Facebook"></a>
+                	<a href="https://x.com/" target="_blank"><img src="Imagens/twitter.png" alt="X"></a>
+                	<a href="https://www.instagram.com/" target="_blank"><img src="Imagens/instagram.png" alt="Instagram"></a>
+            	</div>
+        	</div>
+        	<div class="footer-bottom">
+            	<p>&copy; 2025 Sabores da Casa. Todos os direitos reservados.</p>
+        	</div>
+    	</footer> 
 	</body>
 </html>
